--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -3,6 +3,7 @@
 $color-white: #ffffff;
 $color-black: #000000;
 $color-gray: #888888;
+$color-gray-light: #EEE;
 $color-font: #333333;
 $color-blue-light: #3498db;
 $color-blue-dark: navy;
