--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -7,12 +7,17 @@ html
 {
     font: {
         family: $base-font;
-        size: 1rem;
+        size: 0.85rem;
     }
 
     color: $color-font;
 
     line-height: $base-line-height;
+}
+
+img
+{
+    max-width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -59,6 +64,11 @@ p {
     {
         margin-top: -0.75rem;
     }
+
+    &:last-child
+    {
+        margin-bottom: 0;
+    }
 }
 
 a
@@ -102,6 +112,11 @@ main
 
 @media all and(min-width: $breakpoint-tablet)
 {
+    html
+    {
+        font-size: 1rem;
+    }
+    
     main
     {
         margin-top: $header-height-tablet;
