--- a/resources/assets/sass/_base.scss
+++ b/resources/assets/sass/_base.scss
@@ -65,6 +65,11 @@ p {
         margin-top: -0.75rem;
     }
 
+    &.small
+    {
+        font-size: 0.85rem;
+    }
+
     &:last-child
     {
         margin-bottom: 0;
@@ -116,7 +121,7 @@ main
     {
         font-size: 1rem;
     }
-    
+
     main
     {
         margin-top: $header-height-tablet;
