add intersect observer for checking active nav link

--- a/resources/assets/sass/components/_header.scss
+++ b/resources/assets/sass/components/_header.scss
@@ -78,6 +78,14 @@ header {
             font-size: 2rem;
             margin: 1.5rem 0;
         }
+
+        &.active
+        {
+            a
+            {
+                color: $color-blue-dark;
+            }
+        }
     }
 
     &.open
