--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,20 +1,18 @@
-
 // Colors
 $color-white: #ffffff;
 $color-black: #000000;
 $color-gray: #888888;
-$color-gray-light: #EEE;
+$color-gray-light: #eee;
 $color-font: #333333;
 $color-blue-light: #3498db;
 $color-blue-dark: navy;
 
 // Fonts
-$base-font: 'Open Sans', serif;
+$base-font: "Open Sans", serif;
 $base-line-height: 1.8;
 
-$heading-font: 'Merriweather', sans-serif;
+$heading-font: "Merriweather", sans-serif;
 $heading-line-height: 1.2;
-
 
 // Layout
 $container-width: 1440px;
