--- a/resources/assets/sass/components/_hero.scss
+++ b/resources/assets/sass/components/_hero.scss
@@ -1,7 +1,6 @@
-.hero
-{
-    background: linear-gradient(to top, $color-blue-light, $color-blue-dark);
-    padding: 2rem 0 10rem 0;
+.hero {
+  background: linear-gradient(to top, $color-blue-light, $color-blue-dark);
+  padding: 2rem 0 10rem 0;
 
-    color: white;
+  color: white;
 }
