--- a/resources/assets/sass/_helpers.scss
+++ b/resources/assets/sass/_helpers.scss
@@ -1,32 +1,29 @@
-.left
-{
-    text-align: left;
+.left {
+  text-align: left;
 }
 
-.right
-{
-    text-align: right;
+.right {
+  text-align: right;
 }
 
-.center
-{
-    text-align: center;
+.center {
+  text-align: center;
 }
 
-.embed-container
-{
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
 }
 
-.embed-container iframe, .embed-container object, .embed-container embed
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
