--- a/resources/assets/sass/components/_about.scss
+++ b/resources/assets/sass/components/_about.scss
@@ -1,38 +1,29 @@
-#about
-{
-    .about-content
-    {
-        img
-        {
-            margin-bottom: 1rem;
-        }
+#about {
+  .about-content {
+    img {
+      margin-bottom: 1rem;
     }
+  }
 }
 
-@media all and(min-width: 800px)
-{
-    #about
-    {
-        .about-content
-        {
-            display: flex;
-            justify-content: space-between;
+@media all and (min-width: 800px) {
+  #about {
+    .about-content {
+      display: flex;
+      justify-content: space-between;
 
-            .image-holder
-            {
-                flex: 3;
-                margin-right: 2rem;
+      .image-holder {
+        flex: 3;
+        margin-right: 2rem;
 
-                img
-                {
-                    border: 1px solid #CCC;
-                }
-            }
-
-            .text-content
-            {
-                flex: 5;
-            }
+        img {
+          border: 1px solid #ccc;
         }
+      }
+
+      .text-content {
+        flex: 5;
+      }
     }
+  }
 }
