--- a/resources/assets/sass/components/_buttons.scss
+++ b/resources/assets/sass/components/_buttons.scss
@@ -1,77 +1,74 @@
-button, .btn
-{
-    position: relative;
-    display: inline-block;
-    z-index: 1;
+button,
+.btn {
+  position: relative;
+  display: inline-block;
+  z-index: 1;
 
-    color: $color-font;
-    letter-spacing: .2rem;
-    text-decoration: none;
-    font-weight: bold;
+  color: $color-font;
+  letter-spacing: 0.2rem;
+  text-decoration: none;
+  font-weight: bold;
 
-    border-radius: .25rem;
-    padding: 0.5rem 0.75rem;
+  border-radius: 0.25rem;
+  padding: 0.5rem 0.75rem;
 
-    text-transform: uppercase;
-    cursor: pointer;
+  text-transform: uppercase;
+  cursor: pointer;
 
-    transition: .3 all;
+  transition: 0.3 all;
 
-    //credit: https://codepen.io/supah/pen/eJeNLW
+  //credit: https://codepen.io/supah/pen/eJeNLW
 
-    &:before, &:after
-    {
-        content: '';
-        background-image: linear-gradient(to right, $color-blue-light, $color-blue-dark);
-        position: absolute;
-        width: calc(100% + 6px);
-        height: calc(100% + 6px);
-        left: -3px;
-        top: -3px;
-        border-radius: 6px;
-        z-index: -2;
-        transition: all .3s;
+  &:before,
+  &:after {
+    content: "";
+    background-image: linear-gradient(
+      to right,
+      $color-blue-light,
+      $color-blue-dark
+    );
+    position: absolute;
+    width: calc(100% + 6px);
+    height: calc(100% + 6px);
+    left: -3px;
+    top: -3px;
+    border-radius: 6px;
+    z-index: -2;
+    transition: all 0.3s;
+  }
+
+  &:after {
+    background: #fff;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 3px;
+  }
+
+  &:hover {
+    color: $color-white;
+
+    &:before {
+      //
     }
-      
-      &:after
-      {
-        background: #fff;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        border-radius: 3px;
-      }
 
-      &:hover
-      {
-          color: $color-white;
+    &:after {
+      background: transparent;
+    }
+  }
 
-          &:before
-          {
-           //
-          }
+  &:active {
+    color: $color-white;
 
-          &:after
-          {
-              background: transparent;
-          }
-      }
+    &:before {
+      background: linear-gradient(to left, $color-blue-light, $color-blue-dark);
+    }
 
-      &:active
-      {
-          color: $color-white;
-
-          &:before
-          {
-            background: linear-gradient(to left, $color-blue-light, $color-blue-dark);
-          }
-
-          &:after
-          {
-              background: transparent;
-          }
-      }
+    &:after {
+      background: transparent;
+    }
+  }
 }
