--- a/resources/assets/sass/components/_footer.scss
+++ b/resources/assets/sass/components/_footer.scss
@@ -1,16 +1,13 @@
-footer
-{
-    background-color: $color-gray-light;
+footer {
+  background-color: $color-gray-light;
 
-    > .container--full-width
-    {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
+  > .container--full-width {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
-    nav
-    {
-        font-size: 1.5rem;
-    }
+  nav {
+    font-size: 1.5rem;
+  }
 }
