--- a/resources/assets/sass/components/_header.scss
+++ b/resources/assets/sass/components/_header.scss
@@ -1,168 +1,148 @@
 header {
-    position: fixed;
-    z-index: 50;
-    top: 0;
-    left: 0;
-    width: 100%;
+  position: fixed;
+  z-index: 50;
+  top: 0;
+  left: 0;
+  width: 100%;
 
-    background-color: white;
+  background-color: white;
+  border-bottom: 1px solid $color-gray;
+  box-shadow: 0px 3px 100px 1px rgba(0, 0, 0, 0.3);
+
+  > .container--full-width {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
     border-bottom: 1px solid $color-gray;
-    box-shadow: 0px 3px 100px 1px rgba(0, 0, 0, 0.3);
+  }
 
-    > .container--full-width
-    {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+  .tagline {
+    font-size: 1.25rem;
 
-        border-bottom: 1px solid $color-gray;
+    a {
+      text-decoration: none;
+      color: $color-font;
+
+      &:hover {
+        color: $color-blue-dark;
+      }
     }
+  }
 
-    .tagline
-    {
-        font-size: 1.25rem;
-        
-        a
-        {
-            text-decoration: none;
-            color: $color-font;
-
-            &:hover
-            {
-                color: $color-blue-dark;
-            }
-        }
-    }
-
-    nav
-    {
-        display: flex;
-        justify-content: flex-end;
-    }
+  nav {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
-#menu
-{
-    position: absolute;
-    top: $header-height;
-    left: 0;
+#menu {
+  position: absolute;
+  top: $header-height;
+  left: 0;
 
-    height: 0;
+  height: 0;
+  width: 100%;
+  z-index: 1;
+
+  overflow: hidden;
+
+  margin: 0;
+  padding: 0;
+
+  text-align: center;
+
+  background-color: rgba(255, 255, 255, 0.95);
+
+  list-style-type: none;
+
+  transition: 0.5s height;
+
+  li {
+    display: block;
     width: 100%;
-    z-index: 1;
-
-    overflow: hidden;
-
-    margin: 0;
     padding: 0;
+    margin: 0;
 
-    text-align: center;
-
-    background-color: rgba(255,255,255,.95);
-
-    list-style-type: none;
-
-    transition: .5s height;
-
-    li
-    {
-        display: block;
-        width: 100%;
-        padding: 0;
-        margin: 0;
-
-        a
-        {
-            display: block;
-            text-decoration: none;
-            font-size: 2rem;
-            margin: 1.5rem 0;
-        }
-
-        &.active
-        {
-            a
-            {
-                color: $color-blue-dark;
-            }
-        }
+    a {
+      display: block;
+      text-decoration: none;
+      font-size: 2rem;
+      margin: 1.5rem 0;
     }
 
-    &.open
-    {
-        height: calc(100vh - #{$header-height});
+    &.active {
+      a {
+        color: $color-blue-dark;
+      }
     }
+  }
+
+  &.open {
+    height: calc(100vh - #{$header-height});
+  }
 }
 
-#hamburger
-{
-    position: relative;
-    width: 28px;
-    height: 24px;
-    border-top: 3px solid $color-gray;
-    border-bottom: 3px solid $color-gray;
+#hamburger {
+  position: relative;
+  width: 28px;
+  height: 24px;
+  border-top: 3px solid $color-gray;
+  border-bottom: 3px solid $color-gray;
 
-    cursor: pointer;
-    transition: .3s all;
+  cursor: pointer;
+  transition: 0.3s all;
 
-    &:before, &:after
-    {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 3px;
-        background-color: $color-gray;
+  &:before,
+  &:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: $color-gray;
 
-        top: 50%;
-        left: 0;
-        transform: translate(0, -50%);
-        transition: .3s all;
+    top: 50%;
+    left: 0;
+    transform: translate(0, -50%);
+    transition: 0.3s all;
+  }
+
+  &.open {
+    border-color: transparent;
+
+    &:before {
+      transform: translate(0, -50%) rotate(45deg);
     }
 
-    &.open
-    {
-        border-color: transparent;
-
-        &:before
-        {
-            transform: translate(0, -50%) rotate(45deg);
-        }
-
-        &:after
-        {
-            transform: translate(0, -50%) rotate(-45deg);
-        }
+    &:after {
+      transform: translate(0, -50%) rotate(-45deg);
     }
+  }
 }
 
-@media all and(min-width: $breakpoint-tablet)
-{
-    #menu
-    {
-        position: static;
-        display: flex;
-        justify-content: flex-end;
+@media all and (min-width: $breakpoint-tablet) {
+  #menu {
+    position: static;
+    display: flex;
+    justify-content: flex-end;
 
-        height: auto;
+    height: auto;
 
-        li
-        {
-            display: inline-block;
-            width: auto;
+    li {
+      display: inline-block;
+      width: auto;
 
-            a
-            {
-                display: inline-block;
-                width: auto;
+      a {
+        display: inline-block;
+        width: auto;
 
-                font-size: 1.25rem;
-                margin: 0 0.75rem;
-            }
-        }
+        font-size: 1.25rem;
+        margin: 0 0.75rem;
+      }
     }
+  }
 
-    #hamburger
-    {
-        display: none;
-    }
+  #hamburger {
+    display: none;
+  }
 }
